[gd_scene load_steps=15 format=3 uid="uid://beguyjw3ooy0v"]

[ext_resource type="Script" uid="uid://b0d0063dp6gts" path="res://UI/HUD/hud.gd" id="1_ing8j"]
[ext_resource type="Script" uid="uid://cd3a88w0gqwch" path="res://UI/HUD/health_bar.gd" id="2_te8l2"]
[ext_resource type="Texture2D" uid="uid://cu6f32nh6t6ls" path="res://graphics/160x32_healthbar_01.png" id="3_te8l2"]
[ext_resource type="Texture2D" uid="uid://dte73mhyjrmiu" path="res://graphics/160x32_virusbar_01.png" id="4_qdh7y"]
[ext_resource type="Texture2D" uid="uid://cutgeh5r6fune" path="res://graphics/ui_icons/hotbar_slot_normal.png" id="5_7sg86"]
[ext_resource type="FontFile" uid="uid://cwa26q5pik8ll" path="res://resources/fonts/PressStart2P-Regular.ttf" id="5_radol"]
[ext_resource type="Script" uid="uid://e1vt54wi3f2r" path="res://UI/HUD/current_objective.gd" id="6_s83ig"]
[ext_resource type="PackedScene" uid="uid://cpxy5tg85w03x" path="res://UI/controls_overlay.tscn" id="7_s83ig"]
[ext_resource type="AudioStream" uid="uid://h0w1am78p3li" path="res://audio/sounds/objective_complete.wav" id="8_db5ks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qdh7y"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_right = 1.0

[sub_resource type="Gradient" id="Gradient_qdh7y"]
offsets = PackedFloat32Array(0, 0.5625, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0.012920001, 0.049000002, 0.03876, 0, 0.07846785, 0.49)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_radol"]
gradient = SubResource("Gradient_qdh7y")
width = 640
height = 360
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="FontVariation" id="FontVariation_db5ks"]
base_font = ExtResource("5_radol")
spacing_glyph = -1

[sub_resource type="LabelSettings" id="LabelSettings_s83ig"]
line_spacing = 0.0
font = SubResource("FontVariation_db5ks")
font_size = 8
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.1254902)
shadow_offset = Vector2(0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ing8j")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.85430586, 0, 0, 1)
z_index = 1
layout_mode = 1
offset_left = 38.0
offset_top = 9.0
offset_right = 278.0
offset_bottom = 36.0
scale = Vector2(0.43, 0.48)
mouse_filter = 2
show_percentage = false
script = ExtResource("2_te8l2")

[node name="HelthLayover" type="TextureProgressBar" parent="."]
layout_mode = 1
offset_right = 160.0
offset_bottom = 32.0
mouse_filter = 2
value = 50.0
texture_over = ExtResource("3_te8l2")

[node name="VirusView" type="Control" parent="."]
anchors_preset = 0
offset_right = 71.945
offset_bottom = 40.0
mouse_filter = 2

[node name="VirusBar" type="ProgressBar" parent="VirusView"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.6313726, 0.50980395, 1, 1)
z_index = 1
layout_mode = 1
offset_left = 38.0
offset_top = 9.0
offset_right = 141.0
offset_bottom = 22.0
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_qdh7y")
show_percentage = false

[node name="VirusLayover" type="TextureProgressBar" parent="VirusView/VirusBar"]
layout_mode = 1
offset_left = -38.0
offset_top = -9.0
offset_right = 122.0
offset_bottom = 23.0
mouse_filter = 2
value = 50.0
texture_over = ExtResource("4_qdh7y")

[node name="vignette" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 600.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_radol")

[node name="current_objective" type="NinePatchRect" parent="."]
z_index = 10
z_as_relative = false
layout_mode = 0
offset_left = 645.0
offset_top = 9.0
offset_right = 932.0
offset_bottom = 49.0
texture = ExtResource("5_7sg86")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("6_s83ig")

[node name="margin" type="MarginContainer" parent="current_objective"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="hbox" type="HBoxContainer" parent="current_objective/margin"]
layout_mode = 2
mouse_filter = 2

[node name="description" type="Label" parent="current_objective/margin/hbox"]
unique_name_in_owner = true
z_index = 10
z_as_relative = false
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "\"Bring back the light\" by healing the monolith"
label_settings = SubResource("LabelSettings_s83ig")
autowrap_mode = 3

[node name="check" type="CheckBox" parent="current_objective/margin/hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
button_mask = 0
flat = true

[node name="complete_player" type="AudioStreamPlayer" parent="current_objective"]
unique_name_in_owner = true
stream = ExtResource("8_db5ks")
volume_db = -6.0
bus = &"SFX"

[node name="ControlsOverlay" parent="." instance=ExtResource("7_s83ig")]
layout_mode = 1
offset_left = 133.0
offset_top = 3.0
offset_right = 133.0
offset_bottom = 3.0
